--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,8 @@ body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.custom-style {
+    background-color: green;
+    color: white;
+}
